--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: 'https://umiterkol.github.io'
 
 author: Umit ERKOL                  # change to your full name
 
-avatar: assets/img/favicons/apple-icon.png   # support internet resources
+avatar: assets/img/sample/avatar2.jpg   # support internet resources
 
 github:
   username: umiterkol             # change to your github username
