--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,12 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: TESTER                          # the main title
+title: Doctor's Blog                          # the main title
 
 tagline: A text-focused Jekyll theme.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+ Hack platforms writeups and IT articles.
 
 # Replace with the website url, e.g. 'https://username.github.io'
 url: 'https://umiterkol.github.io'
@@ -35,11 +33,11 @@ social:
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
+    - #https://twitter.com/username      # change to your twitter homepage
     - https://github.com/umiterkol      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://tr.linkedin.com/in/%C3%BCmit-erkol-68574775
 
 google_site_verification: google_meta_tag_verification # change to your verification string
 
@@ -51,7 +49,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Europe/Istanbul
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
