--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Doctor's Blog                          # the main title
+title: Doctor's Blog
 
 tagline: A text-focused Jekyll theme.  # it will display as the sub-title
 
