--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: Doctor's Blog
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: Hack platforms writeups and IT articles.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
  Hack platforms writeups and IT articles.
