--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: >-                        # used by seo meta and the atom feed
 # Replace with the website url, e.g. 'https://username.github.io'
 url: 'https://umiterkol.github.io'
 
-author: Umit ERKOL                  # change to your full name
+author: Umit ERKOL (doctor)        # change to your full name
 
 avatar: assets/img/sample/avatar2.jpg   # support internet resources
 
