--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,3 @@
-# The Site Settings
-# v2.0
-# https://github.com/cotes2020/jekyll-theme-chirpy
-# © 2017-2019 Cotes Chung
-# MIT licensed
-
-
-# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-#--------------------------
-
 title: Doctor's Blog
 
 tagline: Hack platforms writeups and IT articles.  # it will display as the sub-title
@@ -29,8 +19,8 @@ twitter:
   username: twitter_username            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: Umit ERKOL                  # it will shows as the copyright owner in Footer
+  email: umiterkol@hotmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - #https://twitter.com/username      # change to your twitter homepage
