--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ github:
   username: umiterkol             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  #username: twitter_username            # change to your twitter username
 
 social:
   name: Umit ERKOL                  # it will shows as the copyright owner in Footer
